--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.1",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
