--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.1",
+    "framer-motion": "^11.11.0",
     "lucide-react": "^0.378.0",
     "next": "^14.2.14",
     "react": "^18",
